--- a/src/app/display-profile/display-profile.component.html
+++ b/src/app/display-profile/display-profile.component.html
@@ -1,1 +1,18 @@
-<p>display-profile works!</p>
+<div class="container-fluid">
+  <div class="card" id="userCard">
+    <div class="row">
+      <div class="col">
+        <img src="{{ user.photo }}" class="rounded float-left" alt="" />
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <!-- {{ user.id }}
+        {{ user.name }}
+        {{ user.photo }}
+        {{ user.repos }}
+        {{ user.followers }}
+        {{ user.following }}
+        {{ user.dateCreated }} -->
+  </div>
+</div>
