--- a/src/app/display-profile/display-profile.component.html
+++ b/src/app/display-profile/display-profile.component.html
@@ -8,30 +8,30 @@
           alt=""
         />
       </div>
-      <div class="col">
+      <div class="col my-auto">
         <h3>{{ user.name }}</h3>
 
         <table class="table table-striped table-bordered">
           <tbody>
             <tr>
-              <td>Bio:</td>
-              <td>{{ user.bio }}</td>
+              <td class="font-weight-bold">Bio:</td>
+              <td class="font-italic text-center">{{ user.bio }}</td>
             </tr>
             <tr>
-              <td>Repositories:</td>
-              <td>{{ user.reposNumber }}</td>
+              <td class="font-weight-bold">Repositories:</td>
+              <td class="font-italic text-center">{{ user.reposNumber }}</td>
             </tr>
             <tr>
-              <td>Following:</td>
-              <td>{{ user.following }}</td>
+              <td class="font-weight-bold">Following:</td>
+              <td class="font-italic text-center">{{ user.following }}</td>
             </tr>
             <tr>
-              <td>Followers:</td>
-              <td>{{ user.followers }}</td>
+              <td class="font-weight-bold">Followers:</td>
+              <td class="font-italic text-center">{{ user.followers }}</td>
             </tr>
             <tr>
-              <td>Date created:</td>
-              <td>{{ user.dateCreated }}</td>
+              <td class="font-weight-bold">Date created:</td>
+              <td class="font-italic text-center">{{ user.dateCreated }}</td>
             </tr>
           </tbody>
         </table>
