--- a/src/app/display-profile/display-profile.component.html
+++ b/src/app/display-profile/display-profile.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="card mx-auto" id="userCard">
+  <div class="card mx-auto m-2" id="userCard">
     <div class="row p-2">
       <div class="col">
         <img
