--- a/src/app/display-profile/display-profile.component.html
+++ b/src/app/display-profile/display-profile.component.html
@@ -35,7 +35,22 @@
             </tr>
           </tbody>
         </table>
-        {{ user.repos }}
+      </div>
+    </div>
+  </div>
+  <h4 class="text-center m-2 text-white font-weight-bold">REPOSITORIES:</h4>
+  <div class="row">
+    <div class="card m-2 mx-auto" id="repoCard" *ngFor="let repo of repos">
+      <div class="card-body">
+        <h5 class="card-title font-weight-bold">{{ repo.name }}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">{{ repo.description }}</h6>
+        <p class="card-text">
+          <span class="badge badge-pill badge-warning">{{
+            repo.language
+          }}</span>
+          <span class="float-right">{{ repo.updatedAt }}</span>
+        </p>
+        <a href="#" class="card-link mt-auto">Open Repository</a>
       </div>
     </div>
   </div>
