fixed errors on the http service

--- a/src/app/display-profile/display-profile.component.html
+++ b/src/app/display-profile/display-profile.component.html
@@ -52,7 +52,9 @@
           }}</span>
           <span class="float-right">{{ repo.updatedAt }}</span>
         </p>
-        <a href="#" class="card-link mt-auto">Open Repository</a>
+        <a href="{{ repo.url }}" target="_blank" class="card-link"
+          >Open Repository</a
+        >
       </div>
     </div>
   </div>
