Added the search functionality for github user

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,14 +1,18 @@
-<div class="m-2">
+<div class="m-2" (submit)="submitParameter()">
   <form class="mx-auto">
     <div class="form-group my-auto row">
       <input
         type="text"
         class="form-control rounded col"
         placeholder="Search for a User"
+        #search="ngModel"
+        name="search"
+        [(ngModel)]="newSearch.parameters"
       />
       <button type="submit" class="btn btn-info float-right col-">
         Search
       </button>
+      {{ newSearch.parameters }}
     </div>
   </form>
 </div>
