--- a/src/app/display-profile/display-profile.component.html
+++ b/src/app/display-profile/display-profile.component.html
@@ -1,6 +1,5 @@
 <div class="container-fluid">
-  <app-form></app-form>
-
+  <app-form (searchString)="getUser($event)"></app-form>
   <div class="card mx-auto m-2" id="userCard">
     <div class="row p-2">
       <div class="col">
