Added http get for the repositories search

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -4,7 +4,7 @@
       <input
         type="text"
         class="form-control rounded col"
-        placeholder="Search for a User"
+        placeholder="Search"
         #search="ngModel"
         name="search"
         [(ngModel)]="newSearch.parameters"
