--- a/src/app/display-repositories/display-repositories.component.html
+++ b/src/app/display-repositories/display-repositories.component.html
@@ -2,6 +2,6 @@
   <h4 class="text-center m-2 text-white font-weight-bold">
     REPOSITORIES SEARCH
   </h4>
-  <app-form (searchString)="getUser($event)"></app-form>
+  <app-form (searchString)="searchRepos($event)"></app-form>
   <app-repositories [repos]="repos"></app-repositories>
 </div>
