--- a/src/app/repositories/repositories.component.html
+++ b/src/app/repositories/repositories.component.html
@@ -5,7 +5,9 @@
       <h6 class="card-subtitle mb-2 text-muted">{{ repo.description }}</h6>
       <p class="card-text">
         <span class="badge badge-pill badge-warning">{{ repo.language }}</span>
-        <span class="float-right">{{ repo.updatedAt }}</span>
+        <span class="float-right font-italic">{{
+          repo.updatedAt | datePassed
+        }}</span>
       </p>
       <a href="{{ repo.url }}" target="_blank" class="card-link"
         >Open Repository</a
