--- a/src/app/repositories/repositories.component.html
+++ b/src/app/repositories/repositories.component.html
@@ -1,8 +1,15 @@
 <div class="row">
-  <div class="card m-2 mx-auto" id="repoCard" *ngFor="let repo of repos">
+  <div
+    class="card m-2 mx-auto"
+    id="repoCard"
+    *ngFor="let repo of repos"
+    appHighlight
+  >
     <div class="card-body my-auto">
       <h5 class="card-title font-weight-bold">{{ repo.name }}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">{{ repo.description }}</h6>
+      <h6 class="card-subtitle mb-2 text-muted">
+        {{ repo.description }}
+      </h6>
       <p class="card-text">
         <span class="badge badge-pill badge-warning">{{ repo.language }}</span>
         <span class="float-right font-italic">{{
