--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<!-- <app-display-profile></app-display-profile> -->
-<app-display-repositories></app-display-repositories>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
