--- a/src/app/display-profile/display-profile.component.html
+++ b/src/app/display-profile/display-profile.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <h3 class="text-center m-2 text-white font-weight-bold">SEARCH A USER</h3>
   <app-form (searchString)="getUser($event)"></app-form>
   <div class="card mx-auto m-2" id="userCard">
     <div class="row p-2">
